fixed z-index issue of modal appearing behind code snippet window. Added another variable for controlling z index

--- a/avatar-integration-templates/templates/centered-support-modal/snippet.css
+++ b/avatar-integration-templates/templates/centered-support-modal/snippet.css
@@ -9,7 +9,7 @@
     width: 90%;          /* Adjusted width */
     max-width: 1000px;
     height: 60vh;        /* Set to percentage of viewport height */
-    z-index: 100;
+    z-index: 0;
     border: 2px solid var(--support-button-color);
     border-radius: 8px;
     box-shadow: 0 4px 20px rgba(0, 0, 0, 0.3);
